# financial-agent-2

./: BATCH_TEST_README.md  METRICS_TRACKING_FIXES.md  README.md  REPORT.md  TESTING.md  batch_test.py  evaluate_model_eval_dataset.py  pyproject.toml  quick_test.py  run_batch_test.py
batch_test_results_gpt_4o_mini_20260112_114004/: aggregate_metrics.json  metadata.json  results.json
batch_test_results_gpt_4o_mini_20260112_115025/: metadata.json
data/: model_eval_dataset.json
docs/: EVALUATION_METRICS_COMPREHENSIVE.md  EVALUATION_METRICS_UPDATE.md  GOLDEN_DATASET_EVALUATION.md  GOLDEN_DATASET_SUMMARY.md  METRICS_QUICK_REFERENCE.md  METRICS_VERIFICATION.md  README_SCHEMA_REFACTORING.md  WORKFLOW_IMPLEMENTATION_README.md  WORKFLOW_PLANNER_PROMPT_COMPREHENSIVE.md  evaluate_golden_dataset.py.old  workflow_example.py
evaluation_results/gpt4o_eval_results/: comparison_report.json
evaluation_results/o3_eval_results/: comparison_report.json
model_evaluations/: evaluate_model_eval_dataset.py
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  agent.py  agent_v2.py  result_verifier.py  workflow_executor.py  workflow_judge.py  workflow_planner.py  workflow_validator.py
src/evaluation/: __init__.py  batch_test.py  models.py  runner.py  sampler.py  tracker.py  writer.py
src/models/: __init__.py  dataset.py  exceptions.py  tool_schemas.py  workflow_schema.py
src/prompts/: __init__.py  result_verifier.py  text_tool.py  (+1 more)
tests/: README.md  __init__.py  conftest.py  requirements-test.txt  test_executor.py  test_integration.py  test_models.py  test_table_normalizer.py  test_table_tool.py  test_validator.py
(+11 files in other folders)
